# MLOps-Workshops

./: README.md
.github/workflows/: build_sagemaker_container.yml  crewai-build-and-push-to-ecr.yml  delete_sagemaker_resources.yml  deploy_to_sagemaker.yml  yolo_training.yml
AI_Agents/: Lecture.md
AI_Agents/ai-news-agency/: .gitignore  README.md
AI_Agents/ai-news-agency/app/: .env.example  __init__.py  app.py  docker-compose.yml  docker-entrypoint.sh  init_db.py  models.py  requirements.txt
AI_Agents/ai-news-agency/app/templates/: article.html  base.html  create.html  index.html
AI_Agents/ai-news-agency/infra/: README.md  app-runner-ai-write-agent.tf
AI_Agents/devops_ai_agent/: README.md  pyproject.toml
AI_Agents/devops_ai_agent/src/devops_ai_agent/: crew.py  main.py
CI_CD/: Lecture.md
CI_CD/crewai/infra/: app-runner-ai-write-agent.tf  iam.tf  outputs.tf  providers.tf  variables.tf
CI_CD/crewai/writer-agent/: Dockerfile.prod  app.py  docker-compose.yml  docker.env.example  init_db.py  news_agency.py  run.sh  setup.sh
CI_CD/crewai/writer-agent/templates/: base.html  (+5 more)
CI_CD/ray/: cluster-config-aws.yaml
CI_CD/sagemaker/: README.md  build_and_push_to_ecr.py  run_local_server.py  test_model.py
CI_CD/sagemaker/inference_container/: README.md
CI_CD/yolo/: check_gpu.py  data.yaml  ray_gpu_trainer.py  ray_training_config.yaml  requirements.txt  run_ray_github_action.py  run_ray_training.py  train_yolo.py
From_Research_to_Production/Day-3/: Lecture.md  app-rag.py  document_loader.py  gateway.dstack.yml  generate_devops_docs.py  service-app.dstack.yml
(+10 files in other folders)
