[project]
name = "devops_ai_agent"
version = "0.1.0"
description = "devops-ai-agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.108.0,<1.0.0"
]

[project.scripts]
devops_ai_agent = "devops_ai_agent.main:run"
run_crew = "devops_ai_agent.main:run"
train = "devops_ai_agent.main:train"
replay = "devops_ai_agent.main:replay"
test = "devops_ai_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
